--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^6.24.1",
-    "framer-motion": "^12.23.24",
-    "react-webcam": "^7.2.0",
-    "dexie-react-hooks": "^4.2.0",
-    "dexie": "^4.2.1",
-    "tesseract.js": "^6.0.1"
+    "@google/genai": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.23.1",
+    "framer-motion": "11.2.10",
+    "react-webcam": "7.2.0",
+    "dexie-react-hooks": "1.1.7",
+    "dexie": "4.0.7",
+    "tesseract.js": "5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
