refactor: Remove unused dependencies and optimize assets
Removes Jimp and Buffer dependencies. Updates `package.json` and `index.html` to reflect this.

Optimizes application assets by replacing PNG icons with inline SVGs in the `manifest.json` and `index.html`. This reduces the number of HTTP requests and improves initial load performance.

Updates `service-worker.js` to no longer cache outdated PNG icons.

--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react-webcam": "7.2.0",
     "dexie-react-hooks": "1.1.7",
     "dexie": "4.0.7",
-    "tesseract.js": "5.1.0",
-    "jimp": "0.22.12",
-    "buffer": "6.0.3"
+    "tesseract.js": "5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
