--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "7K SnapNotes",
   "icons": [
     {
-      "src": "/icon-192.png",
-      "type": "image/png",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect width='192' height='192' rx='38' fill='%2313262F'/%3E%3Ctext x='96' y='96' dominant-baseline='central' text-anchor='middle' font-family='Manrope, sans-serif' font-size='90' font-weight='bold' fill='%23D3D0CB'%3ESN%3C/text%3E%3C/svg%3E",
+      "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "/icon-512.png",
-      "type": "image/png",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='102' fill='%2313262F'/%3E%3Ctext x='256' y='256' dominant-baseline='central' text-anchor='middle' font-family='Manrope, sans-serif' font-size='240' font-weight='bold' fill='%23D3D0CB'%3ESN%3C/text%3E%3C/svg%3E",
+      "type": "image/svg+xml",
       "sizes": "512x512"
     }
   ],
